fix code text was too small

--- a/css/elements.css
+++ b/css/elements.css
@@ -58,7 +58,6 @@ blockquote {
 pre {
   background-color: #333;
   color: #fff;
-  font-size: var(--font-small);
 }
   pre code {
     background-color: transparent;
